feat: finish layout

--- a/ToDo_ui/index.html
+++ b/ToDo_ui/index.html
@@ -13,7 +13,7 @@
     <div class="wrapper">
         <div class="container">
             <h2>HIGH</h2>
-            <label>
+            <label class="input-text">
 				<input type="text" placeholder="Добавить важных дел">
 			</label>
             <label class="checkbox">
@@ -28,12 +28,8 @@
 				<input type="checkbox" class="checkbox-round" name="happy3" value="yes">Начать делать
 				задачу
 			</label>
-            <label class="checkbox" for="123">
-				Начать делать
-				задачу
-			</label><input id="123" type="checkbox" checked class="checkbox-round" name="happy4" value="yes">
             <h2>LOW</h2>
-            <label>
+            <label class="input-text">
 				<input type="text" placeholder="Добавить  ">
 			</label>
             <label class="checkbox">
