feat: delete empty input, add enter-key

--- a/ToDo_ui/index.html
+++ b/ToDo_ui/index.html
@@ -13,19 +13,16 @@
     <div class="wrapper">
         <div class="container">
             <h2>HIGH</h2>
-            <form>
+            <form onsubmit="return false">
                 <label class="input-text">
 					<input type="text" placeholder="Добавить важных дел"><img src="./assets/close-icon.svg" alt="plus">
 				</label>
                 <div>
                     <label class="checkbox">
-						<input type="checkbox" class="checkbox-round" name="happy1" value="yes">Вот вам и супер
-						интересная
-						тема.
-						Вы наверняка заметили что ваши файлы с кодом становятся все объемнее, что хочется вынести
-						некоторые
-						вещи
-						куда-то за пределы основной программы.
+						<input type="checkbox" class="checkbox-round" name="happy1" value="yes">Lorem ipsum dolor sit
+						amet consectetur adipisicing elit. Eaque nesciunt quas ratione, eum ut laboriosam cum ad rem
+						voluptatem nostrum a consequatur pariatur laudantium, provident veniam dolore eos nihil ipsa!
+
 						<img src="./assets/close-icon-45.svg" alt="close">
 					</label>
                     <label class="checkbox">
@@ -40,14 +37,14 @@
                 </div>
             </form>
             <h2>LOW</h2>
-            <form action="get">
+            <form onsubmit="return false">
                 <label class="input-text">
 					<input type="text" placeholder="Добавить  "><img src="./assets/close-icon.svg" alt="plus">
 				</label>
                 <div>
                     <label class="checkbox">
-						<input type="checkbox" class="checkbox-round" name="happy5" value="yes">Посмотреть ютубчик<img
-							src="./assets/close-icon-45.svg" alt="close">
+						<input type="checkbox" class="checkbox-round" name="happy5" value="yes">Посмотреть
+						документацию<img src="./assets/close-icon-45.svg" alt="close">
 					</label>
                 </div>
             </form>
