feat: add request in weather

--- a/weather/index.html
+++ b/weather/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <div class="wrapper">
-            <label class="input" for=""><input type="text" placeholder="Actobe"><img src="./assets/search.svg" alt="search"></label>
+            <label class="input" for="#"><input type="text" placeholder="Actobe"><img src="./assets/search.svg" alt="search"></label>
             <div class="two-screen">
                 <div class="left-screen">
                     <div class="main-section">
@@ -20,7 +20,7 @@
                             <div class="temperature-tab1">14°</div>
                             <div class="icon-weather"><img src="./assets/cloud.svg" alt="cloud"></div>
                             <div class="city-tab1">
-                                <div>Actobe</div>
+                                <div class="city-now">Actobe</div>
                                 <img src="./assets/Shape.svg" alt="shape">
                             </div>
                         </div>
@@ -91,6 +91,7 @@
             </div>
         </div>
     </div>
+    <script src="./main.js"></script>
 </body>
 
 </html>
