feat: finish now and deatils tabs

--- a/weather/index.html
+++ b/weather/index.html
@@ -21,17 +21,17 @@
                             <div class="icon-weather"><img src="./assets/cloud.svg" alt="cloud"></div>
                             <div class="city-tab1">
                                 <div class="city-now">Actobe</div>
-                                <img src="./assets/Shape.svg" alt="shape">
+                                <div class="shape"><img src="./assets/Shape.svg" alt="shape"></div>
                             </div>
                         </div>
                         <div id="tab-item2" class="tab-item">
                             <div class="city-tab2">Actobe</div>
                             <div class="weather-info">
-                                <div class="temperature-tab2">Temperature:14°</div>
-                                <div class="feel-like-tab2">Feels like: 10°</div>
-                                <div class="weather-tab2">Weather: Clouds</div>
-                                <div class="sunrise-tab2">Sunrise: 03:21</div>
-                                <div class="sunset-tab2">Sunset: 18:54</div>
+                                <div class="temperature-tab2">Temperature:<span>14</span>°</div>
+                                <div class="feel-like-tab2">Feels like: <span>10</span>°</div>
+                                <div class="weather-tab2">Weather: <span>Clouds</span></div>
+                                <div class="sunrise-tab2">Sunrise: <span>03:21</span></div>
+                                <div class="sunset-tab2">Sunset: <span>18:54</span></div>
                             </div>
                         </div>
                         <div id="tab-item3" class="tab-item">
@@ -80,18 +80,13 @@
                 <div class="right-screen">
                     <h2>Added locations:</h2>
                     <div class="locations">
-                        <p>Amur</p>
-                        <p>Samara</p>
-                        <p>Bali</p>
-                        <p>Dane</p>
-                        <p>Kilo</p>
-                        <p>Nur-Sultan</p>
+                        <!-- <p>Nur-Sultan<img src="./assets/close-icon-45.svg" alt="close"></p> -->
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <script src="./main.js"></script>
+    <script type="module" src="./main.js"></script>
 </body>
 
 </html>
